# RustBerryOS

./: .gitignore  Cargo.toml  Makefile  README.md  kernel8.img
src/: bsp.rs  console.rs  driver.rs  main.rs  panic.rs  print.rs  synchronization.rs  time.rs
src/_arch/aarch64/: cpu.rs  time.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s
src/bsp/: raspberrypi.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  driver.rs  kernel.ld  memory.rs
tests/: boot_test_string.rb
